--- a/package.json
+++ b/package.json
@@ -22,8 +22,12 @@
   },
   "homepage": "https://github.com/BrenoGO/BossaBoxChallenge-BackEnd#readme",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "cors": "^2.8.5",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "express-load": "^1.1.16",
+    "lodash": "^4.17.11",
+    "mongoose": "^5.6.2"
   },
   "devDependencies": {
     "nodemon": "^1.19.1"
