--- a/package.json
+++ b/package.json
@@ -17,9 +17,6 @@
   ],
   "author": "BrenoGO",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/BrenoGO/BossaBoxChallenge-BackEnd/issues"
-  },
   "homepage": "https://github.com/BrenoGO/BossaBoxChallenge-BackEnd#readme",
   "dependencies": {
     "body-parser": "^1.19.0",
@@ -30,6 +27,7 @@
     "mongoose": "^5.6.2"
   },
   "devDependencies": {
+    "jshint": "^2.10.2",
     "nodemon": "^1.19.1"
   }
 }
