--- a/package.json
+++ b/package.json
@@ -20,11 +20,14 @@
   "homepage": "https://github.com/BrenoGO/BossaBoxChallenge-BackEnd#readme",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "consign": "^0.1.6",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "express-load": "^1.1.16",
+    "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.13",
-    "mongoose": "^5.6.2"
+    "mongoose": "^5.6.2",
+    "passport": "^0.4.0",
+    "passport-jwt": "^4.0.0"
   },
   "devDependencies": {
     "jshint": "^2.10.2",
